src/system/Admin/style/admin.css
/* ... */
/* styles for the warning message shown if any of the install directory, install.php or zrc.php are found */
#z-maincontent div#z-adminwarning {
    background: url("../../../images/icons/extrasmall/error.png") #FFCBCA 99% 0.35em no-repeat; /*non-CSS3 browsers*/
    background: url("../../../images/icons/extrasmall/error.png") 99% 0.35em no-repeat, -moz-linear-gradient(top, #F7DCDC, #FFCBCA) repeat scroll 0 0 transparent; /*gecko*/
    background: url("../../../images/icons/extrasmall/error.png") 99% 0.35em no-repeat, -webkit-gradient(linear, left top, left bottom, from(#F7DCDC), to(#FFCBCA)) repeat scroll 0 0 transparent; /*webkit*/
    background: url("../../../images/icons/extrasmall/error.png") 99% 0.35em no-repeat, linear-gradient(#F7DCDC, #FFCBCA); /*CSS3*/
    border: 2px solid #990000;
}

/* styling for developer notices */
#z-maincontent div#z-developernotices {
    background: url("../../../images/icons/extrasmall/run.png") #C5E8F1 99% 0.35em no-repeat; /*non-CSS3 browsers*/
    background: url("../../../images/icons/extrasmall/run.png") 99% 0.35em no-repeat, -moz-linear-gradient(top, #EAF5FA, #C5E8F1) repeat scroll 0 0 transparent; /*gecko*/
    background: url("../../../images/icons/extrasmall/run.png") 99% 0.35em no-repeat, -webkit-gradient(linear, left top, left bottom, from(#EAF5FA), to(#C5E8F1)) repeat scroll 0 0 transparent; /*webkit*/
    background: url("../../../images/icons/extrasmall/run.png") 99% 0.35em no-repeat, linear-gradient(#EAF5FA, #C5E8F1); /*CSS3*/
    border: 2px solid #95C9EF;
}

div#z-developernotices strong,
div#z-securityanalyzer strong,
div#z-updatechecker strong {
    background: url("../../../images/global/arrow_down_black.png") no-repeat scroll 5px 0.70em;
    display: block;
    font-size: 1.2em;
    font-weight: bold;
    margin: 0 0 0.8em;
    padding: 0.25em 0.25em 0.25em 15px;
}

div#z-developernotices strong:hover,
div#z-securityanalyzer strong:hover,
div#z-updatechecker strong:hover {
    background: url("../../../images/global/arrow_down_grey.png") no-repeat scroll 5px 0.70em;
    text-decoration:underline;
}

div#z-developernotices strong.z-panel-active,
div#z-securityanalyzer strong.z-panel-active,
div#z-updatechecker strong.z-panel-active {
    background: url("../../../images/global/arrow_right_black.png") no-repeat scroll 5px 0.70em;
}

div#z-developernotices strong.z-panel-active:hover,
div#z-securityanalyzer strong.z-panel-active:hover,
div#z-updatechecker strong.z-panel-active:hover {
    background: url("../../../images/global/arrow_right_grey.png") no-repeat scroll 5px 0.70em;
}

div#z-developernotices a,
div#z-adminwarning a,
div#z-updatechecker a,
div#z-securityanalyzer a {
    color: #444;
    padding: 0;
    margin: 0;
}

div#z-developernotices a:hover,
div#z-adminwarning a:hover,
div#z-updatechecker a:hover,
div#z-securityanalyzer a:hover {
    color: #000;
    text-decoration: underline;
}

div#z-developernotices ul,
div#z-adminwarning ul,
div#z-updatechecker ul,
div#z-securityanalyzer ul,
div#z-updatechecker p {
    list-style-position: outside;
    list-style-type: disc;
    margin: 0 1em 1em;
}

/* Used to style the cancel delete button when asking for a confirmation */
div.canceldelete-container {
    margin: 0 auto;
    color: inherit;
    background-color: #ffffea;
    width: 30%;
    text-align: center;
    border: 1px solid #cccccc;
    padding: 10px 0px 10px 0px;
}

div.canceldelete-container h2 {
    color: gray;
    background-color: inherit;
    display: inline;
}

div.canceldelete-container img {
    float: left;
}

/******************************************************************************/
/* Admin category description
/******************************************************************************/

div.z-admincategorydescription {
    text-align: left;
    margin-bottom: 12px;
}

/******************************************************************************/
/* Styling for core version
/******************************************************************************/

#z-maincontent .z-admin-coreversion {
    color: #999;
    font-size: 0.9em;
    margin: 0 0 1.25em;
}

/******************************************************************************/
/* Disabled admin function links
/******************************************************************************/

div.z-admincontainer a.z-disabledadminlink, /* BC */
div.z-adminbox a.z-disabledadminlink,       /* BC */
div.z-admin-content a.z-disabledadminlink {
    text-decoration: line-through;
}

/******************************************************************************/
/* Styling for noscript category propertly selector label
/******************************************************************************/

div.property_selector_noscript {
    display: inline;
}

/*****************************************************************************/
/* Backwards compatibility for Zikula 1.2 modules: Header area
/*****************************************************************************/

#z-maincontent div.z-adminbox>img {
    float: left;
    margin-right: 10px;
}

#z-maincontent div.z-adminbox h1 {
    background: none;
    color: #333;
    font-size: 24px;
    font-weight: normal;
    line-height: 36px;
    margin: 0;
    padding: 0;
    text-align: left;
}

#z-maincontent div.z-adminbox h1:after {
    /* clearfix */
    content: ".";
    display: block;
    height: 0;
    clear: both;
    visibility: hidden;
}

#z-maincontent div.z-adminpageicon {
    padding-bottom: 10px;
}

#z-maincontent div.z-adminpageicon img {
    float: left;
    margin-right: 5px;
    max-height: 22px;
    max-width: 22px;
    padding-top: 12px;
}

#z-maincontent div.z-adminpageicon+h2 {
    background: none;
    border-bottom: 1px solid #EEEEEE;
    color: #333333;
    font-size: 18px;
    font-weight: normal;
    line-height: 22px;
    margin: 0 0 10px;
    padding: 0 0 1px;
    text-align: left;
}

#z-maincontent div.z-admincontainer h2+* {
    clear: both;
}
/* ... */

